--- a/index.html
+++ b/index.html
@@ -1,1 +1,63 @@
+<DOCTYPE! html>
 
+  <html>
+
+  <body>
+    <div id="page">
+      <div class="bg-russian-violet" id="header">
+        <a href="" class="no-link" title="Homepage">
+          <h1 id="dm">Duncan Marquardt</h1>
+        </a>
+      </div>
+      <nav id="subdomain-block">
+        <div id="subdomains">
+          <div class="subdomain">
+            <h2><a href="" class="no-link subdomain-link underline-when-hovered-yellow change-colour-when-hovered-yellow" id="greeting-page">
+                Hello!
+              </a></h2>
+          </div>
+          <div class="dropdown subdomain">
+            <h2><a href="" class="no-link subdomain-link underline-when-hovered-phthalo-blue change-colour-when-hovered-phthalo-blue" id="writing-subdomain">
+                Writing
+              </a></h2>
+            <div class="dropdown-content" id="writing-dropdown">
+              <h3><a href="" class="no-link dropdown-link underline-when-hovered-neon-blue change-colour-when-hovered-neon-blue" id="short-stories-subdomain">
+                  Essays
+                </a></h3>
+              <h3><a href="" class="no-link dropdown-link underline-when-hovered-green change-colour-when-hovered-green" id="short-stories-subdomain">
+                  Short Stories
+                </a></h3>
+            </div>
+          </div>
+
+          <div class="hide subdomain">
+            <h2><a href="" class="no-link subdomain-link underline-when-hovered-purple change-colour-when-hovered-purple" id="music-subdomain">
+                Music
+              </a></h2>
+          </div>
+          <div class="hide subdomain">
+            <h2> <a href="" class="no-link subdomain-link underline-when-hovered-green change-colour-when-hovered-green" id="worldbuilding-subdomain">
+                Worldbuilding
+              </a></h2>
+          </div>
+        </div>
+      </nav>
+      <div id="hr-div">
+        <hr>
+      </div>
+      <div class="" id="face-block">
+        <p>hello</p>
+      </div>
+      <div id="hr-div">
+        <hr>
+      </div>
+      <footer>
+        <div class="" id="footer">
+          <p>hi</p>
+        </div>
+      </footer>
+    </div>
+
+  </body>
+
+  </html>
