--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 
   <html>
 
+<head>
+    <link rel="stylesheet" href="styles.css">
+</head>
+    
   <body>
     <div id="page">
       <div class="bg-russian-violet" id="header">
