--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
   <html>
 
 <head>
-    <link rel="stylesheet" href="styles.css">
+  <title>Duncan Marquardt - Hompage</title>
+  <meta charset="UTF-8">
+  <meta name="author" content="Duncan Marquardt">
+  
+  <link rel="stylesheet" href="styles.css">
+  <script src="reviews.js"></script>
+  <link rel="icon" type="favicon.png" href="favicon.png">
 </head>
     
   <body>
